--- a/src/app/pages/create-work-sheet/create-work-sheet.component.scss
+++ b/src/app/pages/create-work-sheet/create-work-sheet.component.scss
@@ -38,3 +38,31 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     }
 }
 
+.container {
+    width: 100%;
+}
+@media (min-width: 640px) {
+    .container {
+        max-width: 640px;
+    }
+}
+@media (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+}
+@media (min-width: 1024px) {
+    .container {
+        max-width: 1024px;
+    }
+}
+@media (min-width: 1280px) {
+    .container {
+        max-width: 1150px;
+    }
+}
+@media (min-width: 1536px) {
+    .container {
+        max-width: 1150px;
+    }
+}
