--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -1,3 +1,4 @@
+<app-header title="รายงาน"></app-header>
 <ion-content>
   <div class="p-4">
     <form [formGroup]="form" class="grid md:grid-cols-3 grid-cols-1 gap-2">
