--- a/src/app/pages/create-work-sheet/create-work-sheet.component.html
+++ b/src/app/pages/create-work-sheet/create-work-sheet.component.html
@@ -8,7 +8,7 @@
         <p class="text-sm text-gray-600">กรุณากรอกข้อมูลให้ครบถ้วน</p>
       </div>
 
-      <form id="content-to-export" [formGroup]="worksheetForm" class="space-y-8 bg-white rounded-lg shadow-sm p-6">
+      <form [formGroup]="worksheetForm" class="space-y-8 bg-white rounded-lg shadow-sm p-6">
         <!-- ประเภทงาน -->
         <div class="flex items-center space-x-8 mb-6">
           <label class="relative flex items-center group cursor-pointer">
